--- a/about.html
+++ b/about.html
@@ -1,146 +1,84 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>關於我們 | PRAY COIN</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-            font-family: 'Noto Sans TC', sans-serif;
-            color: #343a40;
-        }
-        .navbar-brand img {
-            height: 40px;
-            margin-right: 10px;
-        }
-        .section-header {
-            background-color: #e9ecef;
-            padding: 4rem 0;
-            text-align: center;
-            border-bottom: 1px solid #dee2e6;
-        }
-        .section-header h1 {
-            font-weight: bold;
-            color: #495057;
-        }
-        .content-section {
-            padding: 4rem 0;
-        }
-        .content-section h2 {
-            font-weight: bold;
-            margin-bottom: 2rem;
-            color: #495057;
-        }
-        .content-section p {
-            line-height: 1.8;
-            font-size: 1.1rem;
-        }
-        .mission-card, .vision-card {
-            border: none;
-            border-radius: 0.75rem;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-            padding: 2rem;
-            margin-bottom: 1.5rem;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-        .mission-card:hover, .vision-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.12);
-        }
-        .mission-card h3, .vision-card h3 {
-            font-weight: bold;
-            margin-bottom: 1rem;
-            color: #007bff; /* Bootstrap primary color */
-        }
-        footer {
-            background-color: #343a40;
-            color: white;
-            padding: 2rem 0;
-        }
-        footer a {
-            color: #adb5bd;
-            text-decoration: none;
-        }
-        footer a:hover {
-            color: white;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Prayer Coin | 關於我們</title>
+  <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-    <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <img src="img/logo.png" alt="PRAY Logo">
-            <strong>PRAY COIN</strong>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html">首頁</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">關於我們</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html#howto">使用說明</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-primary ms-lg-3" href="#">登入 / 註冊</a>
-                </li>
-            </ul>
-        </div>
+  <header>
+    <div class="navbar">
+      <a class="brand" href="index.html">
+        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
+        <span>Prayer Coin</span>
+      </a>
+      <nav class="nav-links">
+        <a href="index.html">首頁</a>
+        <a href="about.html" class="active">關於我們</a>
+        <a href="howto.html">使用說明</a>
+        <a href="dashboard.html">用戶面板</a>
+        <a href="login.html">登入</a>
+      </nav>
     </div>
-</nav>
+  </header>
+  <main>
+    <section class="section">
+      <h1>團隊故事與願景</h1>
+      <p>簡述平台起源、共同的信念以及對未來的期望。此區保留給品牌宣言與團隊理念。</p>
+      <div class="placeholder" aria-hidden="true" style="margin-top: 1.5rem;"></div>
+    </section>
 
-<div class="section-header">
-    <div class="container">
-        <h1>關於 PRAY COIN</h1>
-        <p class="lead">我們如何將信仰、社群與科技結合，創造一個有意義的代禱平台。</p>
+    <section class="section">
+      <h2>核心理念</h2>
+      <p>透過三個主題卡片介紹我們的價值觀，後續可替換為圖示或實際內容。</p>
+      <div class="layout-grid columns-3" style="margin-top: 1.5rem;">
+        <div class="card-wireframe">科技賦能禱告：以科技連結信仰與互助</div>
+        <div class="card-wireframe">社群共好：鼓勵彼此守望與支持</div>
+        <div class="card-wireframe">透明信任：代幣與資料流程公開透明</div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>團隊成員配置</h2>
+      <p>使用卡片排版展示團隊角色，例如產品、工程、牧養與營運。</p>
+      <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
+        <div class="card-wireframe">產品與設計：規劃用戶體驗、界面設計、品牌識別</div>
+        <div class="card-wireframe">工程開發：負責前後端與區塊鏈串接</div>
+        <div class="card-wireframe">牧養夥伴：建立禱告守護網絡</div>
+        <div class="card-wireframe">營運夥伴：社群推廣、合作整合</div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>里程碑與發展</h2>
+      <p>時間軸預留區，顯示產品開發歷程、重大事件與未來計畫。</p>
+      <div class="placeholder" aria-hidden="true" style="min-height: 200px;"></div>
+    </section>
+
+    <section class="section">
+      <h2>技術與安全承諾</h2>
+      <p>簡述架構：前端、後端、資料庫與區塊鏈整合概念。</p>
+      <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
+        <div class="card-wireframe">前端框架：HTML5 / CSS3 / JavaScript，預留整合 Vue 或 React</div>
+        <div class="card-wireframe">後端服務：Node.js、Python 或 PHP 方案，支援 REST / GraphQL</div>
+        <div class="card-wireframe">資料庫策略：SQL + NoSQL 混合儲存用戶與互動</div>
+        <div class="card-wireframe">資安與隱私：HTTPS、JWT/OAuth2、錢包安全管理</div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="footer-inner">
+      <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+      <div class="social-links">
+        <span class="tag-chip">Facebook</span>
+        <span class="tag-chip">Instagram</span>
+        <span class="tag-chip">YouTube</span>
+      </div>
     </div>
-</div>
-
-<section class="content-section">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-9">
-                <p>PRAY COIN 平台不僅是一個網站，更是一個充滿愛與關懷的社群。我們深信，當人們聚集在一起為彼此禱告時，就能產生一股強大的力量。我們透過區塊鏈技術，將這份力量加以鼓勵、記錄並賦予價值。</p>
-
-                <div class="mission-card mt-4">
-                    <h3 class="text-primary">我們的使命</h3>
-                    <p>我們的使命是鼓勵陌生人之間建立真誠的代禱連結。我們致力於讓「禱告的聲音」成為平台的核心內容，透過創新的代幣系統，激勵使用者之間的互動與貢獻，讓愛與互助的行動得以延續和擴展。</p>
-                </div>
-
-                <div class="vision-card mt-4">
-                    <h3 class="text-success">我們的願景</h3>
-                    <p>我們的願景是打造一個全球性的禱告網絡，讓任何有需要的人都能找到支持，讓任何願意代禱的人都能有管道發揮影響力。我們期望 PRAY COIN 成為一個能被廣泛認可的公益項目，最終將部分收益用於支持宣教與公益事工，擴散更多祝福。</p>
-                </div>
-
-                <p class="mt-4">我們相信，透過 PRAY COIN，每一個人都能成為祝福的管道。無論是分享你的需要，或是伸出援手為他人代禱，你都是這個平台上不可或缺的一份子。</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<footer class="mt-5">
-    <div class="container text-center">
-        <p class="mb-1">© 2025 PRAY COIN 平台 - 與愛同行</p>
-        <p class="small">
-            <a href="about.html">關於我們</a> ·
-            <a href="index.html#howto">使用說明</a> ·
-            <a href="#">隱私政策</a>
-        </p>
-    </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </footer>
 </body>
 </html>
+
+
+
