--- a/login.html
+++ b/login.html
@@ -1,78 +1,56 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>登入 - Pray Coin</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Prayer Coin | 登入</title>
+  <link rel="stylesheet" href="css/wireframe.css">
 </head>
 <body>
-  <!-- Header -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-      <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="./index.html">
-          <img src="./img/logo.png" alt="PRAY Logo" style="height:40px;">
-          <strong class="ms-2">PRAY COIN</strong>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">回首頁</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">關於我們</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html#howto">使用說明</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-primary ms-lg-3" href="./login.html">登入 / 註冊</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <div class="navbar">
+      <a class="brand" href="index.html">
+        <img class="brand-logo" src="img/logo.png" alt="Prayer Coin logo">
+        <span>Prayer Coin</span>
+      </a>
+      <nav class="nav-links">
+        <a href="index.html">首頁</a>
+        <a href="about.html">關於我們</a>
+        <a href="howto.html">使用說明</a>
+        <a href="dashboard.html">用戶面板</a>
+        <a href="login.html" class="active">登入</a>
+      </nav>
+    </div>
   </header>
-
-  <!-- Login Form -->
-  <main class="d-flex align-items-center min-vh-100 bg-light">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-4">
-          <div class="card shadow-sm">
-            <div class="card-body p-4">
-              <h3 class="card-title text-center mb-4">登入 Pray Coin</h3>
-              <form>
-                <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" placeholder="輸入您的 Email">
-                </div>
-                <div class="mb-3">
-                  <label for="password" class="form-label">密碼</label>
-                  <input type="password" class="form-control" id="password" placeholder="輸入密碼">
-                </div>
-                <button type="submit" class="btn btn-primary w-100">登入</button>
-              </form>
-
-              <div class="text-center my-3 text-muted">或使用第三方登入</div>
-              <div class="d-grid gap-2">
-                <button class="btn btn-outline-danger">使用 Google 登入</button>
-                <button class="btn btn-outline-primary">使用 Facebook 登入</button>
-              </div>
-
-              <div class="text-center mt-4">
-                <p class="mb-0">還沒有帳號？ <a href="signup.html">立即註冊</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
+  <main>
+    <section class="section" style="max-width: 520px; margin-left: auto; margin-right: auto;">
+      <h1>登入或註冊</h1>
+      <p>此區顯示登入表單、社群登入選項與安全提醒。</p>
+      <div class="form-wireframe" style="margin-top: 1.5rem;">
+        <div class="form-row">電子郵件輸入欄位</div>
+        <div class="form-row">密碼輸入欄位</div>
+        <div class="form-row">登入按鈕 / 送出</div>
+      </div>
+      <div class="action-bar" style="margin-top: 1.5rem;">
+        <span class="action-pill">Facebook 登入</span>
+        <span class="action-pill">Google 登入</span>
+      </div>
+      <p style="margin-top: 1.5rem;">還沒有帳號？前往 <a href="signup.html">註冊頁面</a>。</p>
+      <p style="margin-top: 0.5rem; color: var(--text-secondary);">兩步驟驗證、重設密碼與錢包綁定相關提示保留於此。</p>
+    </section>
+  </main>
+  <footer>
+    <div class="footer-inner">
+      <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+      <div class="social-links">
+        <span class="tag-chip">Facebook</span>
+        <span class="tag-chip">Instagram</span>
+        <span class="tag-chip">YouTube</span>
       </div>
     </div>
-  </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </footer>
 </body>
 </html>
+
+
+
