--- a/about.html
+++ b/about.html
@@ -23,62 +23,167 @@
     </div>
   </header>
   <main>
-    <section class="section">
-      <h1>團隊故事與願景</h1>
-      <p>簡述平台起源、共同的信念以及對未來的期望。此區保留給品牌宣言與團隊理念。</p>
-      <div class="placeholder" aria-hidden="true" style="margin-top: 1.5rem;"></div>
+    <section class="section hero hero-split">
+      <div>
+        <span class="badge-soft">OUR STORY</span>
+        <h1>把禱告變成可被看見、被回應的行動</h1>
+        <p>Prayer Coin 由一群熱衷禱告與科技的夥伴所組成，期待運用區塊鏈的透明與信任特性，凝聚世界各地的守望者。我們相信每一個禱告都值得被紀錄、被回應，也值得在社群中看見真實的陪伴。</p>
+        <div class="checklist">
+          <li>建立安全的禱告發佈與回應流程，避免信息被遺忘</li>
+          <li>透過  代幣鼓勵持續的陪伴與語音禱告</li>
+          <li>提供教會、機構、個人都能使用的開放生態</li>
+        </div>
+      </div>
+      <div class="hero-media">
+        <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1200&q=80" alt="團隊禱告與協作">
+      </div>
     </section>
 
     <section class="section">
-      <h2>核心理念</h2>
-      <p>透過三個主題卡片介紹我們的價值觀，後續可替換為圖示或實際內容。</p>
+      <h2>我們的核心價值</h2>
+      <p>從禱告到行動，我們以四個關鍵價值推動 Prayer Coin 的產品發展與社群文化。</p>
+      <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
+        <div class="gradient-card">
+          <strong>真實陪伴</strong>
+          <p>結合文字與語音禱告，讓彼此的生命故事被聽見，取代快速、片段的社群互動。</p>
+        </div>
+        <div class="gradient-card">
+          <strong>透明信任</strong>
+          <p>以區塊鏈紀錄代幣發放與消耗，打造可追蹤、可驗證的守望流程。</p>
+        </div>
+        <div class="gradient-card">
+          <strong>共享資源</strong>
+          <p>提供 API 與 SDK，讓教會、非營利組織與開發者能快速串接，延伸祈禱網絡。</p>
+        </div>
+        <div class="gradient-card">
+          <strong>合規守護</strong>
+          <p>遵循區域法規、重視資料隱私，確保每筆禱告、每次代幣交易都在安全環境中進行。</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="media-feature">
+        <div>
+          <span class="badge-soft">MISSION</span>
+          <h2>從本地小組到全球祈禱網絡</h2>
+          <p>Prayer Coin 的雛形來自於一個線上小組。疫情期間，我們經歷了遠距禱告的限制，因而開始思考：如何讓禱告不因距離而消失？如何記錄每一次回應的恩典？</p>
+          <p>透過數位工具與代幣激勵，我們看見跨文化、跨城市的守望者相互扶持，也看見禱告所帶來的真實改變。</p>
+          <ul class="checklist">
+            <li>Beta 測試涵蓋 12 個國家、60+ 禱告小組</li>
+            <li>導入語音轉寫與自動代幣回饋機制</li>
+            <li>提供儀表板即時洞察祈禱影響力</li>
+          </ul>
+        </div>
+        <img src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?auto=format&fit=crop&w=1200&q=80" alt="全球禱告社群">
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>祈禱網絡剪影</h2>
+      <p>實際禱告情境示意，圖像來自 Unsplash 免授權素材，用於呈現未來內容配置的靈感。</p>
+      <div class="image-grid" style="margin-top: 1.5rem;">
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1515705576963-95cad62945b6?auto=format&fit=crop&w=900&q=80" alt="家庭禱告">
+          <div class="image-caption">家庭守望：為彼此代禱與感謝</div>
+        </div>
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1464998857633-50e59fbf2fe6?auto=format&fit=crop&w=900&q=80" alt="青年團契">
+          <div class="image-caption">青年團契：用禱告陪伴尋找方向</div>
+        </div>
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=900&q=80" alt="跨文化宣教">
+          <div class="image-caption">跨文化宣教：在不同語言中彼此祝福</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>發展里程碑</h2>
+      <p>我們正在邁向開放治理與更廣泛的全球合作，每一個里程碑都是社群共同的成果。</p>
+      <div class="timeline">
+        <div class="timeline-item">
+          <strong>2024 Q4 · Private Beta</strong>
+          <p>完成第一版禱告牆、語音禱告與自動代幣發放流程。</p>
+        </div>
+        <div class="timeline-item">
+          <strong>2025 Q2 · Global Rollout</strong>
+          <p>推出行動版體驗、開放 API 與教會專屬儀表板。</p>
+        </div>
+        <div class="timeline-item">
+          <strong>2025 Q4 · DAO 試運轉</strong>
+          <p>啟動社群提案機制，代幣治理禱告專案資源分配。</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>團隊焦點</h2>
+      <p>Prayer Coin 由產品設計、牧養輔導、資料工程與區塊鏈專家組成。我們也持續招募對禱告有負擔、擅長行動設計與資料分析的夥伴加入。</p>
       <div class="layout-grid columns-3" style="margin-top: 1.5rem;">
-        <div class="card-wireframe">科技賦能禱告：以科技連結信仰與互助</div>
-        <div class="card-wireframe">社群共好：鼓勵彼此守望與支持</div>
-        <div class="card-wireframe">透明信任：代幣與資料流程公開透明</div>
-      </div>
-    </section>
-
-    <section class="section">
-      <h2>團隊成員配置</h2>
-      <p>使用卡片排版展示團隊角色，例如產品、工程、牧養與營運。</p>
-      <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
-        <div class="card-wireframe">產品與設計：規劃用戶體驗、界面設計、品牌識別</div>
-        <div class="card-wireframe">工程開發：負責前後端與區塊鏈串接</div>
-        <div class="card-wireframe">牧養夥伴：建立禱告守護網絡</div>
-        <div class="card-wireframe">營運夥伴：社群推廣、合作整合</div>
-      </div>
-    </section>
-
-    <section class="section">
-      <h2>里程碑與發展</h2>
-      <p>時間軸預留區，顯示產品開發歷程、重大事件與未來計畫。</p>
-      <div class="placeholder" aria-hidden="true" style="min-height: 200px;"></div>
-    </section>
-
-    <section class="section">
-      <h2>技術與安全承諾</h2>
-      <p>簡述架構：前端、後端、資料庫與區塊鏈整合概念。</p>
-      <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
-        <div class="card-wireframe">前端框架：HTML5 / CSS3 / JavaScript，預留整合 Vue 或 React</div>
-        <div class="card-wireframe">後端服務：Node.js、Python 或 PHP 方案，支援 REST / GraphQL</div>
-        <div class="card-wireframe">資料庫策略：SQL + NoSQL 混合儲存用戶與互動</div>
-        <div class="card-wireframe">資安與隱私：HTTPS、JWT/OAuth2、錢包安全管理</div>
+        <div class="gradient-card">
+          <strong>Product &amp; UX</strong>
+          <p>設計友善的禱告體驗，協助用戶在 3 分鐘內完成分享與邀請。</p>
+        </div>
+        <div class="gradient-card">
+          <strong>Faith &amp; Care</strong>
+          <p>牧養顧問為祈禱內容把關，提供情緒支援與危機轉介流程。</p>
+        </div>
+        <div class="gradient-card">
+          <strong>Blockchain &amp; Data</strong>
+          <p>建構安全可靠的代幣機制與資料洞察，確保代幣流向透明。</p>
+        </div>
       </div>
     </section>
   </main>
   <footer>
     <div class="footer-inner">
-      <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
-      <div class="social-links">
-        <span class="tag-chip">Facebook</span>
-        <span class="tag-chip">Instagram</span>
-        <span class="tag-chip">YouTube</span>
+      <div class="footer-top">
+        <div class="footer-brand">
+          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <div>
+            <strong>Prayer Coin</strong>
+            <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
+          </div>
+        </div>
+        <div class="footer-grid">
+          <div class="footer-column">
+            <span class="footer-title">導覽</span>
+            <a href="index.html">首頁</a>
+            <a href="about.html">關於我們</a>
+            <a href="howto.html">使用說明</a>
+            <a href="dashboard.html">用戶面板</a>
+          </div>
+          <div class="footer-column">
+            <span class="footer-title">資源</span>
+            <a href="whitepaper.html">白皮書</a>
+            <a href="disclaimer.html">免責聲明</a>
+            <a href="prayfor/details.html">禱告牆</a>
+          </div>
+          <div class="footer-column">
+            <span class="footer-title">支援</span>
+            <a href="login.html">登入</a>
+            <a href="signup.html">註冊</a>
+            <a href="mailto:support@prayercoin.app">聯絡支援</a>
+          </div>
+        </div>
+        <div class="footer-social">
+          <span class="footer-title">社群</span>
+          <div class="footer-social-links">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">YouTube</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <div class="footer-legal">
+          <a href="whitepaper.html">白皮書</a>
+          <a href="disclaimer.html">免責聲明</a>
+        </div>
       </div>
     </div>
   </footer>
 </body>
 </html>
-
-
-
