--- a/howto.html
+++ b/howto.html
@@ -23,68 +23,167 @@
     </div>
   </header>
   <main>
-    <section class="section">
-      <h1>如何開始使用 Prayer Coin</h1>
-      <p>此頁面保留完整的入門流程，協助新用戶快速了解平台操作。</p>
-      <div class="placeholder" aria-hidden="true" style="margin-top: 1.5rem;"></div>
-    </section>
-
-    <section class="section list-wireframe">
-      <h2>快速開始</h2>
-      <p>依照步驟完成註冊、驗證與建立第一則禱告事項。</p>
-      <ul style="margin-top: 1.5rem;">
-        <li>
-          <strong>Step 01｜建立帳戶</strong><br>
-          填寫基本資料，確認電子郵件並設定安全錢包。
-        </li>
-        <li>
-          <strong>Step 02｜認識代幣</strong><br>
-          了解代幣獲取方式、用途與安全提醒。
-        </li>
-        <li>
-          <strong>Step 03｜發布禱告</strong><br>
-          撰寫禱告內容、選擇標籤與是否提升曝光度。
-        </li>
-      </ul>
-    </section>
-
-    <section class="section">
-      <h2>禱告與回應流程</h2>
-      <p>以流程圖呈現禱告發佈、回應、語音禱告與代幣回饋。</p>
-      <div class="placeholder" aria-hidden="true" style="min-height: 220px;"></div>
-    </section>
-
-    <section class="section">
-      <h2>代幣運用場景</h2>
-      <p>列出代幣的獲得、消耗與獎勵模式，協助用戶掌握經濟機制。</p>
-      <div class="layout-grid columns-3" style="margin-top: 1.5rem;">
-        <div class="card-wireframe">禱告曝光加值：使用代幣提升在首頁的排序</div>
-        <div class="card-wireframe">守望回饋：完成語音禱告或文字回應獲得代幣</div>
-        <div class="card-wireframe">使命任務：透過活動或挑戰解鎖額外獎勵</div>
+    <section class="section hero hero-split">
+      <div>
+        <span class="badge-soft">GUIDE</span>
+        <h1>3 個步驟，啟動你的禱告任務</h1>
+        <p>Prayer Coin 讓代禱資訊有秩序地流動：建立禱告、分享給守望者、聆聽語音回應並回饋代幣。我們將流程拆成簡單的三個步驟，快速上手。</p>
+        <div class="checklist">
+          <li>使用純文字與關鍵字描述禱告需求</li>
+          <li>上傳圖片與設定分享標題，提升曝光</li>
+          <li>邀請朋友留言或語音禱告，獲得代幣回饋</li>
+        </div>
+      </div>
+      <div class="hero-media">
+        <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1200&q=80" alt="使用 Prayer Coin 的示意圖">
       </div>
     </section>
 
     <section class="section">
-      <h2>常見問題區</h2>
-      <p>預留 FAQ 區塊，回答註冊、代幣、安全性等重點提問。</p>
+      <h2>快速開始 · Step by Step</h2>
+      <p>依序完成以下動作，十分鐘內即可發佈第一個禱告任務並啟動語音禱告回饋。</p>
+      <div class="icon-step-grid">
+        <div class="icon-step">
+          <strong>Step 01 · 建立禱告</strong>
+          <p>於「我的禱告」頁面填寫標題、禱告內容（200-1000 字）與關鍵字，並上傳至少 2 張圖片。</p>
+          <ul class="checklist">
+            <li>清楚描述背景與代禱要點</li>
+            <li>設定禱告分類與曝光選項</li>
+            <li>選擇是否使用代幣提升曝光</li>
+          </ul>
+        </div>
+        <div class="icon-step">
+          <strong>Step 02 · 分享給守望者</strong>
+          <p>複製禱告頁面 link，邀請朋友、教會小組或線上社群加入守望。也可以直接在社群貼文分享。</p>
+          <ul class="checklist">
+            <li>支援 Telegram / LINE / Messenger</li>
+            <li>社群分享自動帶入封面圖片</li>
+            <li>可設定禱告截止時間與提醒</li>
+          </ul>
+        </div>
+        <div class="icon-step">
+          <strong>Step 03 · 收集回應與代幣</strong>
+          <p>守望者可用文字或語音回應，系統自動判斷語音長度並發放  代幣，同時更新 Dashboard 數據。</p>
+          <ul class="checklist">
+            <li>語音滿 10 秒才會計入有效次數</li>
+            <li>代幣可用於提升禱告曝光或捐出</li>
+            <li>即時通知最新回應與互動</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="media-feature">
+        <img src="https://images.unsplash.com/photo-1519181245277-cffeb31da2fb?auto=format&fit=crop&w=1200&q=80" alt="Dashboard 示意">
+        <div>
+          <span class="badge-soft">DASHBOARD</span>
+          <h2>用儀表板掌握禱告成效</h2>
+          <p>登入後可在 Dashboard 查看禱告列表、語音統計、代幣流向與守望者活動熱區，協助你評估禱告影響力並安排後續行動。</p>
+          <ul class="checklist">
+            <li>即時更新回應次數、語音長度與互動趨勢</li>
+            <li>一鍵匯出報表與 QR Code 分享</li>
+            <li>即將推出：熱門禱告通知與自動感謝訊息</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>常見情境與建議</h2>
+      <p>以下範例圖片取自 Unsplash，提供你規劃祈禱內容時的靈感。無論家庭、醫療、宣教或青年議題，都能找到合適的呈現方式。</p>
+      <div class="image-grid" style="margin-top: 1.5rem;">
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1523289333742-be1143f6b766?auto=format&fit=crop&w=900&q=80" alt="家庭守望">
+          <div class="image-caption">家庭守望：用圖片呈現成員合照與禱告焦點。</div>
+        </div>
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1507537297725-24a1c029d3ca?auto=format&fit=crop&w=900&q=80" alt="醫療團隊">
+          <div class="image-caption">醫療團隊：告訴守望者如何為前線人員禱告。</div>
+        </div>
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=900&q=80" alt="青年小組">
+          <div class="image-caption">青年小組：分享活動照片，邀請更多陪伴與同理。</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <h2>祈禱流程圖</h2>
+      <p>以下流程概念示意未來可插入資訊圖或影片，協助初次接觸 Prayer Coin 的使用者快速理解。</p>
+      <div class="placeholder" aria-hidden="true" style="min-height: 240px;"></div>
+    </section>
+
+    <section class="section">
+      <h2>常見問題</h2>
       <div class="layout-grid columns-2" style="margin-top: 1.5rem;">
-        <div class="card-wireframe">問：如何保護我的錢包？<br>答：提供基本安全建議與客服聯絡方式。</div>
-        <div class="card-wireframe">問：禱告被回應後會發生什麼？<br>答：說明代幣回饋與通知流程。</div>
+        <div class="gradient-card">
+          <strong>忘記密碼怎麼辦？</strong>
+          <p>請在登入頁面選擇「忘記密碼」，輸入信箱後會收到重設連結。若未收到，請檢查垃圾信或聯絡客服。</p>
+        </div>
+        <div class="gradient-card">
+          <strong>語音多久才算有效？</strong>
+          <p>語音需超過 10 秒才會記錄並發放代幣。未達門檻仍會儲存音檔，方便守望者回顧。</p>
+        </div>
+        <div class="gradient-card">
+          <strong>可以刪除禱告嗎？</strong>
+          <p>發佈者可隨時切換「公開 / 私密」，或提交刪除申請。已發放的代幣紀錄將保留於帳戶。</p>
+        </div>
+        <div class="gradient-card">
+          <strong>代幣如何使用？</strong>
+          <p>可用於提升禱告曝光度、捐贈給公益祈禱池，或參與未來的 DAO 治理提案。</p>
+        </div>
       </div>
     </section>
   </main>
   <footer>
     <div class="footer-inner">
-      <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
-      <div class="social-links">
-        <span class="tag-chip">Facebook</span>
-        <span class="tag-chip">Instagram</span>
-        <span class="tag-chip">YouTube</span>
+      <div class="footer-top">
+        <div class="footer-brand">
+          <img class="footer-logo" src="img/logo.png" alt="Prayer Coin logo">
+          <div>
+            <strong>Prayer Coin</strong>
+            <p>祈禱代幣平台，連結禱告、陪伴與行動。</p>
+          </div>
+        </div>
+        <div class="footer-grid">
+          <div class="footer-column">
+            <span class="footer-title">導覽</span>
+            <a href="index.html">首頁</a>
+            <a href="about.html">關於我們</a>
+            <a href="howto.html">使用說明</a>
+            <a href="dashboard.html">用戶面板</a>
+          </div>
+          <div class="footer-column">
+            <span class="footer-title">資源</span>
+            <a href="whitepaper.html">白皮書</a>
+            <a href="disclaimer.html">免責聲明</a>
+            <a href="prayfor/details.html">禱告牆</a>
+          </div>
+          <div class="footer-column">
+            <span class="footer-title">支援</span>
+            <a href="login.html">登入</a>
+            <a href="signup.html">註冊</a>
+            <a href="mailto:support@prayercoin.app">聯絡支援</a>
+          </div>
+        </div>
+        <div class="footer-social">
+          <span class="footer-title">社群</span>
+          <div class="footer-social-links">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">YouTube</a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <span>&copy; 2025 Prayer Coin. All rights reserved.</span>
+        <div class="footer-legal">
+          <a href="whitepaper.html">白皮書</a>
+          <a href="disclaimer.html">免責聲明</a>
+        </div>
       </div>
     </div>
   </footer>
 </body>
 </html>
-
-
-
